# cli_flags

./: .gitignore  CMakeLists.txt  README.md  cli_flags.vix  vix.json
examples/: basic_parse.cpp  help_only.cpp  minimist_style.cpp  subcommands.cpp
include/cli_flags/: cli_flags.hpp
tests/: test_basic.cpp
